--- a/Computer Science - OSN Informatika - Python - C++/Evalator/.vscode/settings.json
+++ b/Computer Science - OSN Informatika - Python - C++/Evalator/.vscode/settings.json
@@ -57,6 +57,9 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "iostream": "cpp"
+    "*.ndjson": "jsonl",
+    "*.dbclient-js": "javascript",
+    "iostream": "cpp",
+    "ostream": "cpp"
   }
 }
